<resources>
    <string name="app_name">Jubako Examples</string>
    <string name="button_sample_hello">Hello</string>
    <string name="button_sample_simple_carousels">Simple Carousels</string>
    <string name="button_sample_load_async">Load Async</string>
    <string name="button_sample_row_updates">Row Updates</string>
    <string name="button_sample_self_updating_items">Self Updating Items</string>
    <string name="button_sample_enterprise_hello">Enterprise Hello</string>
    <string name="retry_button">Try Again</string>
    <string name="error_message">Something went wrong!</string>
    <string name="button_sample_movies">Movies</string>
    <string name="button_infinite_hello">Infinite Hello</string>
    <string name="button_sample_grid_fill">Grid Fill</string>
</resources>
